# FlexFS

./: .gitignore  0001-enable-flexfs.patch  0001-readahead.patch  0001-rocksdb-modified.patch  0002-enable-rocksdb.patch  CMakeLists.txt  fenfs.mk  flexfs.mk
fs/: fdpnvme.cc  fdpnvme.h  fs_zenfs.cc  fs_zenfs.h  io_zenfs.cc  io_zenfs.h  uring_cmd.cc  uring_cmd.h  uringlib_zenfs.cc  uringlib_zenfs.cc_ori  uringlib_zenfs.h  util.cc  util.h  zbd_zenfs.cc  zbd_zenfs.h  zbdlib_zenfs.cc  zbdlib_zenfs.h  zonefs_zenfs.cc  zonefs_zenfs.h
util/: Makefile  flexfs  flexfs.cc  flexfs.dbg  run.sh
